# genomics-model-zoo

./: pyproject.toml
src/genomics_models/: __init__.py  base.py  borzoi.py  enformer.py  utils.py
