[project]
name = "genomics-model-zoo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "einops>=0.8",
    "pooch>=1",
    "torch>=2.5.0",
    "tqdm>=4",
]

[build-system]
requires = ["setuptools>=70.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
genomics_model_zoo = ["data/tf_gammas.pt"]

[[tool.uv.index]]
name = "westlake"
url = "https://mirrors.westlake.edu.cn/pypi/simple"
default = true
