[project]
name = "genomics-model-zoo"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.15"
dependencies = [
    "einops>=0.8",
    "pooch>=1",
    "torch>=2.5.0",
]

[build-system]
requires = ["setuptools>=70.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["genomics_models*"]

[tool.setuptools.package-data]
genomics_models = ["data/tf_gammas.pt"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true